[gd_scene load_steps=5 format=2]

[ext_resource path="res://kra_imported/virus-ulq.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Miscs/distroy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/enemies/virus.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 63.0

[node name="virus" type="Area2D" groups=[
"virus",
]]
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="distroy" parent="." instance=ExtResource( 2 )]
scale = Vector2( 5, 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -64, -64, 128, 128 )
[connection signal="area_entered" from="." to="." method="_on_virus_area_entered"]
[connection signal="animation_finished" from="distroy" to="." method="_on_distroy_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
